# auth-awscreds

./: .gitignore  Cargo.toml  Readme.md
src/: main.rs
src/api/: api.rs
src/appdata/: appdata.rs  mod.rs
src/crypt/: crypt.rs
src/iniconfig/: configcreds.rs  mod.rs
