[package]
name = "auth-awscreds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
#actix-rt = "2.7.0"
actix-cors = "0.6.3"
open = "1"
rust-ini = "0.18.0"
openssl = "0.10.28"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
#env_logger = "0.9.0"
#log = "0.4.17"
#futures = "0.3"
libc = "0.2.134"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
opt-level = "z"  # Optimize for size.